--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+nav {
+  display: inline-table;
+  color: #FFF;
+}
+
 h2 {
   color: #8B0000;
   font-weight: 300;
@@ -8,6 +13,7 @@ h2 {
   margin-top: 5px;
   width: 200px;
   margin: 0px 540px 0px 540px;
+  position: relative;
 }
 
 body {
@@ -24,12 +30,12 @@ dt {
 }
 
 section {
-  color: white;
+  color: #FFF;
   order: unset;
   width: 200px;
   padding: 1em;
   float: right;
-  margin-bottom: 500px;
+  position: relative;
 }
 
 .top10 {
