--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ h2 {
   font-weight: 300;
   font-size: 2.3em;
   /*border: 1px dashed #8B0000;*/
-  padding-top: 0.5em;
+  padding-top: 0.1em;
   text-align: center;
   margin-top: 5px;
   width: 200px;
@@ -17,7 +17,8 @@ h2 {
 }
 
 body {
-  background-image: url("../images/sawmask.jpg");
+  background-image: url("../images/sawtricycle.jpg");
+  background-position: center;
 }
 
 dl {
