Made nav bar into table, removed nav link underlines, added hover color to links

--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -3,6 +3,14 @@ nav {
   color: #FFF;
 }
 
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: red;
+}
+
 h2 {
   color: #8B0000;
   font-weight: 300;
