--- a/css/gamestyle.css
+++ b/css/gamestyle.css
@@ -15,7 +15,7 @@ h2 {
   /*border: 1px dashed #8B0000;*/
   padding-top: 0.1em;
   width: 5em;
-  align: right;
+  align: center;
   position: fixed;
 }
 
