--- a/css/creditsstyle.css
+++ b/css/creditsstyle.css
@@ -1,9 +1,26 @@
 nav {
-  display: inline-table;
   color: #FFF;
 }
 
-a {
+table {
+  text-align: center;
+  border: 1px solid black;
+}
+
+td {
+  border: 1px solid black;
+  background-color: hsla(157, 97%, 27%, 0.7);
+}
+
+td:hover {
+  background-color: hsla(166, 53%, 11%, 0.7);
+}
+
+nav a {
+  display: inline;
+  color: rgb(200, 240, 250);
+  text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
 }
 
@@ -11,29 +28,27 @@ a:hover {
   color: red;
 }
 
+h1 {
+  color: white;
+  padding-left: 40px;
+}
+
+li {
+  color: white;
+  text-align: left;
+  list-style-type: square;
+}
+
+h2 {
+  background-color: rgb(1, 29, 79, 0.5);
+  padding-left: 0.5em;
+  font-size: 50px;
+}
+
 body {
-  background-color: #c4c68d;
-}
-
-dl {
-  color: #FFF;
-}
-
-dt {
-  font-weight: bold;
-  margin: 15px 0px;
-}
-
-section {
-  color: #FFF;
-  order: unset;
-  width: 200px;
-  padding: 1em;
-  float: right;
-  position: relative;
-}
-
-.top10 {
-  display: flex;
-  flex-direction: column-reverse;
+  background-image: url("../images/batshadow.jpg");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
