--- a/css/gamestyle.css
+++ b/css/gamestyle.css
@@ -1,3 +1,11 @@
+nav a {
+  display: inline;
+  color: #8b0000;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+ }
+
 a {
   text-decoration: none;
 }
@@ -6,18 +14,27 @@ a:hover {
   color: red;
 }
 
+table {
+  text-align: center;
+  border: 1px solid black;
+}
+
+td {
+  border: 1px solid black;
+}
 
 h2 {
-  color: #8B0000;
-  font-family: 'Nosifer', cursive;
-  font-weight: 300;
-  font-size: 2.3em;
-  /*border: 1px dashed #8B0000;*/
-  padding-top: 0.1em;
-  width: 5em;
-  align: center;
-  position: fixed;
-}
+   color: #8B0000;
+   text-align: center;
+   font-family: 'Nosifer', cursive;
+   font-weight: 300;
+   font-size: 2.3em;
+   padding-top: 0.1em;
+   width: 5em;
+   display: block;
+   margin-left: auto;
+   margin-right: 105px;
+ }
 
 body {
   background-image: url("../images/sawtricycle.jpg");
